...
    }

    // Mapear canal de notificación
    String canal;
    switch (configuraciones!.canalNotificacion) {
      case 'WHATSAPP':
        canal = 'WhatsApp';
        break;
      case 'PUSH':
        canal = 'App';
        break;
      case 'BOTH':
        canal = 'WhatsApp + App';
...
